# src/model/order.model.ts
@@ -5,7 +5,8 @@ const IOrderSchema = new Schema(
     {
         PizzaId: { type: Schema.Types.ObjectId, ref: "IPizzaSchema" },
         CustomerId: { type: Schema.Types.ObjectId, ref: "ICustomerSchema" },
-        PizzaQuantity: { type: Number}
+        PizzaQuantity: { type: Number},
+        TotalBill: { type: Number}
     },
     { timestamps: true }
 )
