# src/types/document/IOrder.ts
@@ -1,10 +1,11 @@
 import { Document, Types } from "mongoose";
 
-export interface IOrder {
+export interface IOrder extends Document {
     _id: string
     PizzaId: string | any
     CustomerId: string | any
     PizzaQuantity: number
+    TotalBill: number
     createdAt?: string
     updatedAt?: string
 }
